# ds_agent

./: CONTRIBUTING.md  PR_TEMPLATE.md  README 2.md  README.md  prompts.yaml  pyproject.toml  requirements.txt  tasks.md  tools.yaml  tools_backup.yaml
config/: data_sources.yaml
docs/: PRD_001_episode_object.md  PRD_002_orchestrator_skeleton.md  PRD_003_memory_backbone.md  PRD_004_notebook_template.md  PRD_005_feedback_pipeline.md  PRD_006_version_control_hooks.md  PRD_007_analysis_library.md  PRD_008_execution_agent.md  PRD_009_data_connector.md  agent_functions.md  agent_workflow.md  analysis_library.md  analysis_workflow.md  architecture_overview.md  data_source_onboarding.md  episode_lifecycle.mmd  episode_schema.yaml  extending_tools.md  memory_architecture.md  memory_flow.mmd  notebook_workflow.mmd  orchestrator_flow.mmd  report_template.md  system_overview.md
docs/schema_docs/: common_player_info.md  team.md  team_history.md
episodes/DS-25-007/: analysis.ipynb  analysis_executed.ipynb  episode.json  plan.json  plan.md  plan.mmd  report.md  report_reasoning.txt
scripts/: post-merge
src/ds_agent/: __init__.py  data.py  episode.py  example_nba_questions.txt  exec_agent.py  feedback.py  kernel_runner.py  manage_episode.py  memory.py  notebook_editor.py  orchestrator.py  run_notebook.py  snapshot.py  tools.py
templates/: analysis_template.ipynb
tests/: test_ds_agent.py  test_episode.py  test_feedback.py  test_manage_episode.py  test_manage_episode_cli.py  test_memory.py  test_notebook_sanity.py  test_orchestrator.py  test_snapshot.py
(+17 files in other folders)
